--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-cont {
+    margin-top: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.retry-cont{
+    margin-top: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main-form{
+    display: flex;
+    flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.form-child{
+    margin-bottom: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text{
+    font-family: Montserrat, serif;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.inp{
+    height: 40px;
+    border-radius: 4px;
+    position: relative;
+    background-color: rgba(255,255,255, 0.9);
+    border: 0;
+    transition: 0.3s all;
+
+    font-family: Montserrat, serif;
+    font-size: 20px;
+}
+
+.inp:hover {
+    background-color: rgba(255, 255, 255, 0.45);
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
+}
+
+.credits{
+    margin-top: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Montserrat, serif;
 }
